# SmartChessboard

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  LICENSE  README.md  wrangler.toml
.claude/: launch.json  settings.json
.claude/commands/: exa-init.md
.claude/skills/handoff/: SKILL.md
.codex/: hooks.json
.github/workflows/: android-release.yml  build.yml  ios-tests.yml  record-goldens.yml  tests.yml  web-deploy.yml
SmartChessboard/: .editorconfig  AGENTS.md  README.md  settings.gradle.kts
SmartChessboard/androidApp/: build.gradle.kts  debug.keystore
SmartChessboard/gradle/: libs.versions.toml
SmartChessboard/iosApp/Configuration/: Config.xcconfig
SmartChessboard/shared/: build.gradle.kts
context/: SESSION_HANDOFF.md
context/archive/: prd-pre-firmware-split.md  shape-notes-rejected.md
context/foundation/: infrastructure.md  lessons.md  prd-firmware.md  prd.md  roadmap.md  shape-alternative.md  shape-notes.md  tech-stack.md  test-plan.md
docs/: attributions.md  bootstrap-verification.md
docs/assets/readme/: TODO.md
docs/reference/: change-md.md  contract-surfaces.md
firmware/: .gitignore  AGENTS.md  CMakeLists.txt  HARDWARE.md  PINOUT.md  README.md  WIRING.md  platformio.ini  sdkconfig.defaults
firmware/src/: CMakeLists.txt  ble_service.cpp  ble_service.h  main.cpp  pins.h
supabase/: AGENTS.md  README.md  cloud-seed-replay-games.sql  config.toml  seed.sql
supabase/migrations/: 20260531233302_position_evals.sql  20260611103324_games.sql  20260611110401_games_rls_hardening.sql  20260612201124_position_evals_chess_api_and_mate.sql  20260612203446_games_user_id_default.sql  20260704221841_seed_sample_games_on_signup.sql  20260704232420_table_grants.sql  20260704232828_api_role_grants_parity.sql
supabase/tests/: games_rls.test.sql  position_evals.test.sql  seed_on_signup.test.sql
(+381 files in other folders)
